@@ -5,4 +5,5 @@
 - Channels can have two effects at once instead of just one.
 - Improved error handling after all sensitive OpenAL calls.
 - Added new effects: Auto Wah, Chorus, Compressor, Flanger, Pitch Shifter, Ring Modulator, and Vocal Morpher.
+- Volume, pitch, and pan values are now clamped to a safe and functional range in Boom.play and Boom.loop methods to avoid a cascade of OpenAL errors.
 - Updated libGDX from 1.9.11 to 1.11.0.
